src/objects/Application__c.object
<CustomObject>
    <description>Object to record information from an application by a person requesting a clearance. This covers Aged Care, Child Related, Disability , general and vulnerable persons</description>
    <fields>
        <fullName>Aboriginal_or_Torres_Strait_Islander__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the applicant considers themselves to be of Aboriginal or Torres Strait Islander descent.</description>
        <inlineHelpText>Do you considers yourself to be of Aboriginal or Torres Strait Islander descent.</inlineHelpText>
        <label>Aboriginal or Torres Strait Islander</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Set by user selection, then used to automatically set RecordType</description>
        <inlineHelpText>Set by user selection, then used to automatically set RecordType.</inlineHelpText>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Aged Care Sector Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Related Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability Services Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Employment Probity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vulnerable Person Related Employment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consent_to_obtain_personal_information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Consent to obtain personal information</description>
        <inlineHelpText>Consent to obtain personal information</inlineHelpText>
        <label>Consent to obtain personal information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Contact that the application is on behalf of.</description>
        <inlineHelpText>The Contact that the application is on behalf of.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_Birth__c</fullName>
        <description>Country that the applicant was born in.</description>
        <inlineHelpText>Country that the applicant was born in.</inlineHelpText>
        <label>Country of Birth</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_First_Name__c</fullName>
        <description>Current first name of applicant.</description>
        <inlineHelpText>Current first name of applicant</inlineHelpText>
        <label>Current First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Last_Name__c</fullName>
        <description>Current last name of applicant.</description>
        <inlineHelpText>Current last name of applicant</inlineHelpText>
        <label>Current Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Middle_Names__c</fullName>
        <description>Current middle name or names of applicant.</description>
        <inlineHelpText>Current middle name or names of applicant</inlineHelpText>
        <label>Current Middle Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Postal_Address__c</fullName>
        <description>Current postal address of the applicant.</description>
        <inlineHelpText>Current postal address of the applicant</inlineHelpText>
        <label>Current Postal Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Postal_Postcode__c</fullName>
        <description>Current postcode of the applicant.</description>
        <inlineHelpText>Current postcode of the applicant</inlineHelpText>
        <label>Current Postal Postcode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Postal_State__c</fullName>
        <description>Current postal address state of the applicant.</description>
        <inlineHelpText>Current postal address state of the applicant</inlineHelpText>
        <label>Current Postal State</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Postal_Suburb__c</fullName>
        <description>Current postal address suburb of the applicant.</description>
        <inlineHelpText>Current postal address suburb of the applicant</inlineHelpText>
        <label>Current Postal Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of birth of the applicant. String to preservce format from web form.</description>
        <inlineHelpText>Date of birth of the applicant.</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have you ever been dismissed or resigned from any employment or a volunteer role in response to or following allegations of improper conduct relating to children</description>
        <inlineHelpText>Have you ever been dismissed or resigned from any employment or a volunteer role in response to or following allegations of improper conduct relating to children?</inlineHelpText>
        <label>Declaration 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Declaration_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have you ever submitted an application for employment or a volunteer role involving contact with children which was declined for disciplinary reasons or allegations of improper conduct</description>
        <inlineHelpText>Have you ever submitted an application for employment or a volunteer role involving contact with children which was declined for disciplinary reasons or allegations of improper conduct?</inlineHelpText>
        <label>Declaration 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Declaration_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have you been (or are you currently) the subject of any professional disciplinary proceedings, or any action that might lead to such proceedings in any jurisdiction? (not including criminal court proceedings).</description>
        <inlineHelpText>Have you been (or are you currently) the subject of any professional disciplinary proceedings, or any action that might lead to such proceedings in any jurisdiction? (not including criminal court proceedings).</inlineHelpText>
        <label>Declaration 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Email address of the applicant.</description>
        <inlineHelpText>Email address of the applicant</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of the applicant.</description>
        <inlineHelpText>Gender of the applicant</inlineHelpText>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period_of_Residence_From__c</fullName>
        <description>Date the applicant first moved into their current residence.</description>
        <inlineHelpText>Date the applicant first moved into their current residence</inlineHelpText>
        <label>Period of Residence From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_of_Residence_To__c</fullName>
        <label>Period of Residence To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Territory_of_Birth__c</fullName>
        <label>State/Territory of Birth</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_No__c</fullName>
        <label>Street No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb_Town__c</fullName>
        <label>Suburb/Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_H__c</fullName>
        <label>Telephone (H)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_M__c</fullName>
        <label>Telephone (M)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_W__c</fullName>
        <label>Telephone (W)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Town_City_of_Birth__c</fullName>
        <label>Town/City of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <label>Unit No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Current_Last_Name__c</columns>
        <columns>Current_First_Name__c</columns>
        <columns>Application_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>Aged_Care_Sector_Employment</fullName>
        <active>true</active>
        <description>This form is to be completed by all paid employees, volunteers and students proposing to commence or continue work in an organisation funded by the Commonwealth to provide aged care services.</description>
        <label>Aged Care Sector Employment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Child_Related_Employment</fullName>
        <active>true</active>
        <description>This form is to be completed by all paid employees, volunteers and students proposing to commence or continue work in child related employment.</description>
        <label>Child Related Employment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disability_Services_Employment</fullName>
        <active>true</active>
        <description>This form is to be completed by all paid employees, volunteers and students proposing to commence or continue work with a prescribed disability service provider, as defined in the Disability Services Act 1993 (SA).</description>
        <label>Disability Services Employment</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Employment_Probity</fullName>
        <active>true</active>
        <description>This form is to be completed by paid employees, volunteers and students as required. Your employer may request that a criminal history check be undertaken before you are employed, or at regular intervals as part of your employment contract.</description>
        <label>General Employment Probity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vulnerable_Person_Related_Employment</fullName>
        <active>true</active>
        <description>This form is to be completed by all paid employees, volunteers and students proposing to commence or continue work in vulnerable person related employment.</description>
        <label>Vulnerable Person Related Employment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>